# sapling

./: CMakeLists.txt  io.cpp  io.h  main.cpp  newick.cpp  newick.h  phylo_node.cpp  phylo_node.h  phylo_tree.cpp  phylo_tree.h  saplingConfig.cmake
include/sapling/: io.h  newick.h  phylo_node.h  sapling.h  tree.h
src/: io.cpp  main.cpp  newick.cpp  phylo_node.cpp  phylo_tree.cpp  tree.cpp
